--- a/style.css
+++ b/style.css
@@ -4,11 +4,20 @@
 body {
     display: flex;
     align-items: center;
-    font-family: 'Montserrat', sans-serif;
     justify-content: center;
     height: 100vh;
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
+
+.all {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 
 .question {
     font-size: 3rem;
@@ -22,6 +31,7 @@ body {
     flex-direction: row;
     justify-content: space-evenly;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .option > * {
@@ -31,12 +41,31 @@ body {
     border-radius: 2px;
 }
 
+.btn-option {
+    transition: background-color 0.5s;
+}
+
 .started {
     display: none;
     align-items: center;
-    font-family: 'Montserrat', sans-serif;
     justify-content: center;
     border: 1px solid black;
     padding: 13px;
     font-size: 0.8rem;
+    width: 100%;
+    max-width: 365px; 
+    text-align: center;
+    box-sizing: border-box;
+    word-break: break-word;
+}
+
+@media (max-width: 400px) {
+    .started {
+        max-width: 95vw;
+    }
+
+    .option {
+        flex-direction: column;
+        align-items: center;   
+    }
 }
