--- a/style.css
+++ b/style.css
@@ -35,10 +35,36 @@ body {
 }
 
 .option > * {
-    border: 1px solid black;
-    padding: 13px;
-    font-size: 0.8rem;
-    border-radius: 2px;
+  --borderradius: 14px;
+  --bgsize: 0.38rem;
+  padding: 1.3rem;
+  border: 1px solid;
+  position: relative;
+  background: white;
+  border-radius: var(--borderradius, 14px);
+  &::after {
+    
+    border-radius: var(--borderradius, 14px);
+    background-image: linear-gradient(
+      45deg,
+      #fff 33.33%,
+      rgba(0, 0, 0, 0.95) 33.33%,
+      rgba(0, 0, 0, 0.95) 50%,
+      #fff 50%,
+      #fff 83.33%,
+      rgba(0, 0, 0, 0.95) 83.33%,
+      rgba(0, 0, 0, 0.95) 100%
+    );
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -2;
+    top: .75rem;
+    left: 0.75rem;
+    width: 100%;
+    height: 100%;
+    background-size: var(--bgsize, 0.28rem) var(--bgsize, 0.28rem);
+  }
 }
 
 .btn-option {
